--- a/packages/sdlc/app/components/pages/desktop/project/detail/stageTrack/wrap.scss
+++ b/packages/sdlc/app/components/pages/desktop/project/detail/stageTrack/wrap.scss
@@ -36,6 +36,16 @@ $col-width-fixed: 80px;
 			max-height: calc(#{$wrap-height} - (#{$header-row-height} + 5px));
 			overflow: hidden;
 		}
+
+		.wrap-side-cell-one {
+			width: 244px;
+		}
+		.wrap-side-cell-two {
+			width: 146px;
+		}
+		.wrap-side-cell-three {
+			width: 97px;
+		}
 	}
 	
 	.wrap-body {
@@ -70,6 +80,10 @@ $col-width-fixed: 80px;
 				&:nth-child(1) {
 					min-width: $col-width-fixed;
 				}
+			}
+
+			.wrap-table-header-cell-full {
+				width: 1% !important;
 			}
 		}
 
@@ -112,6 +126,11 @@ $col-width-fixed: 80px;
 					// box-shadow: inset 0.5em 0.5em 0.5em #FF7C04, inset -0.5em -0.5em 0.5em #FF7C04;
 					background-color: #FFD875;
 				}
+			}
+
+			
+			.wrap-table-body-cell-full {
+				width: 1% !important;
 			}
 
 			.wrap-cell-hover:hover{
